# capstone-project

./: .directory  .gitignore  arch_v1.vsdx  budget.xlsx
Backend/src/: .firebaserc  database.rules.json  firebase.json
ENEL 400/Presentation/: Tech design.pptx
Schematics/: SCH_Capstone_2024-02-12.json
design-process/city-of-regina-contact/: Ravada reply.docx  email draft.docx
design-process/design-process/: Costs.xlsx
documentation/: initial-research.docx
documentation/city-of-regina-contact/: Ravada_s response.docx
documentation/design-process/: Costs.xlsx  gantt-chart.xlsx
documentation/resources/: free-rtos-with-pico.docx  imu.docx
micropython/: readMe.txt.txt
micropython/IMU/: IMU.py  movement UP.txt
micropython/UART/: UARTreading.py
micropython/WiFi/: access_point.py
micropython/bluetooth/: bluetooth.py  central.py  central_right.py  peripheral.py  peripheral_left.py  peripheral_right.py
micropython/bluetooth-IMU/: MPU6050.py  central.py  peripheral_left.py
micropython/cellular-test/: cellular.py
micropython/sending-receiving-interrupts/: sending_high_to_low.py  sending_high_to_low_for_interrupt.py
nb-iot-test/: nb-iot-test.ino
src/firebase/: .firebaserc  database.rules.json  (+1 more)
src/pico_FreeRTOS/src/: CMakeLists.txt  FreeRTOSConfig.h  interrupt.c  interrupt.h  main.c  queues.c  queues.h  tasks.c  tasks.h  util.c  util.h
testing/: 50-buffer-1.xlsx  50-buffer-2.xlsx  New Microsoft Excel Worksheet.xlsx  calibration_testing_50_window_buffer.xlsx  readMe.txt.txt  thresholding-10-buffer.xlsx  thresholding_values_testing.xlsx
(+63 files in other folders)
